# dltype

./: pyproject.toml
dltype/: __init__.py
dltype/_lib/: _core.py  _dependency_utilities.py  _dltype_context.py  _numpy_tensors.py  _parser.py  _tensor_type_base.py  _torch_tensors.py  _universal_tensors.py
dltype/tests/: dltype_test.py  interop_test.py  parser_test.py
