[dependency-groups]
dev = [
  "numpy>=2.2.6",
  "onnx>=1.18.0",
  "pytest>=8.4.1",
  "ruff>=0.12.0",
  "torch>=1.4.0",
  "setuptools>=60.0.0",
  "pyright>=1.1.404"
]

[project]
dependencies = ["pydantic>=2.0"]
description = "An extremely lightweight typing library for torch tensors or numpy arrays. Supports runtime shape checking and data type validation."
keywords = ["pytorch", "numpy", "shape check", "type check"]
license = "Apache-2.0"
license-files = ["LICEN[CS]E.*"]
name = "dltype"
readme = "README.md"
requires-python = ">=3.10"
version = "0.5.0"

[project.optional-dependencies]
numpy = ["numpy"]
torch = ["torch>=1.11.0"]

[project.urls]
homepage = "https://github.com/stackav-oss/dltype"
repository = "https://github.com/stackav-oss/dltype.git"

[tool.pyright]
exclude = []
ignore = []
include = ["dltype"]
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "strict"

[tool.ruff]
indent-width = 4
line-length = 110
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
line-ending = "lf"

[tool.ruff.lint]
extend-select = [
  "ERA",
  "ANN",
  "B",
  "BLE",
  "FBT",
  "COM",
  "C4",
  "EM",
  "FA",
  "ISC",
  "ICN",
  "LOG",
  "G",
  "INP",
  "PIE",
  "T20",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "TID",
  "TC",
  "ARG",
  "PTH",
  "I",
  "C90",
  "NPY",
  "N",
  "PERF",
  "E",
  "W",
  "DOC",
  "D",
  "F",
  "PLE",
  "PLR",
  "PLW",
  "RUF",
  "TRY"
]
fixable = ["ALL"]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"dltype/tests/*" = ["D", "ARG", "FBT"]
